[package]
name = "ramon"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
log = "0.4.20"
kernel-log    = "~0.1"
km-api-sys       = { path = "../km-api-sys"}
kernel-string   = { path = "../kernel-string"}
kernel-macros   = { path = "../kernel-macros"}
kernel-fast-mutex   = { path = "../kernel-fast-mutex"}
kernel-init = { path = "../kernel-init"}

[dependencies.winapi]
git = "https://github.com/Trantect/winapi-rs.git"
branch = "feature/km"
features = [
    "wdm",
    "ntstatus",
]

[dependencies.windows-sys]
version = "0.52"
features = [
    "Wdk",
    "Wdk_Foundation",
    "Wdk_Storage",
    "Wdk_Storage_FileSystem",
    "Wdk_Storage_FileSystem_Minifilters",
    "Win32_Security",
    "Wdk_System_SystemServices",
    "Win32_System_IO",
    "Win32_System_Kernel",
    "Win32_System_Power",
    "Win32_Foundation",
]

[build-dependencies]
winreg = "0.7.0"
