[package]
name = "sysmon"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
kernel-print    = "~0.1"
km-api-sys       = { path = "../km-api-sys"}
kernel-string   = { path = "../kernel-string"}
kernel-macros   = { path = "../kernel-macros"}
kernel-fast-mutex   = { path = "../kernel-fast-mutex"}
kernel-init = { path = "../kernel-init"}

[dependencies.winapi]
git = "https://github.com/Trantect/winapi-rs.git"
branch = "feature/km"
features = [
    "wdm",
    "ntstatus",
]

[build-dependencies]
winreg = "0.7.0"
failure = "0.1.8"
